All list-related markers moved to styles v2
https://github.com/bibledit/cloud/issues/990

--- a/unittests/tests/basic.css
+++ b/unittests/tests/basic.css
@@ -727,3 +727,11 @@ text-indent: -9.5mm;
 margin-left: 31.8mm;
 text-indent: -9.5mm;
 }
+.lik, .i-lik {
+}
+.liv, .i-liv {
+}
+.liv1, .i-liv1 {
+}
+.liv2, .i-liv2 {
+}
