--- a/unittests/tests/exports.css
+++ b/unittests/tests/exports.css
@@ -739,3 +739,11 @@ font-variant: small-caps;
 font-size: x-small;
 vertical-align: super;
 }
+.lik, .i-lik {
+}
+.liv, .i-liv {
+}
+.liv1, .i-liv1 {
+}
+.liv2, .i-liv2 {
+}
