--- a/unittests/tests/editor.css
+++ b/unittests/tests/editor.css
@@ -727,3 +727,11 @@ text-indent: -9.5mm;
 margin-left: 31.8mm;
 text-indent: -9.5mm;
 }
+.lik, .i-lik {
+}
+.liv, .i-liv {
+}
+.liv1, .i-liv1 {
+}
+.liv2, .i-liv2 {
+}
