Arrows for going to previous chapter, and going to next chapter
https://github.com/bibledit/cloud/issues/1009

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1034,6 +1034,14 @@ input#cancel,
 .menu-advanced span {
   margin-right: 0.2em;
 }
+.previouschapter {
+  margin-right: -0.2em;
+  padding-right: 0.1em;
+}
+.nextchapter {
+  margin-left: -0.2em;
+  padding-left: 0.1em;
+}
 .previousverse {
   margin-right: -0.2em;
   padding-right: 0.1em;
