Apply Montserrat font to all divs in workspacewrapper
Updated the CSS selector to apply the 'Montserrat Regular' font to all div elements, in addition to paragraphs, within #workspacewrapper. This ensures consistent typography across these elements.
https://github.com/bibledit/cloud/issues/1042

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1070,7 +1070,7 @@ input#cancel,
   flex: 1;
   overflow: auto;
 }
-#workspacewrapper > p {
+#workspacewrapper > p, div {
   font-family: "Montserrat Regular", sans-serif;
 }
 #workspacewrapper > * {
